--- a/index.html
+++ b/index.html
@@ -95,87 +95,142 @@
       <section id="features" class="section">
         <div class="container">
           <div class="row">
-            <h2 class="section__title">Featured <span class= text--primary>Books</span></h2>
+            <h2 class="section__title">
+              Featured <span class="text--primary">Books</span>
+            </h2>
             <div class="books">
-                <div class="book">
-                    <figure class="book__img--wrapper">
-                        <img class="book__img" src="./assets/crack the coding interview.png" alt="">
-                    </figure>
-                    <div class="book__title">
-                        Crack the Coding Interview
-                    </div>
-                    <div class="book__ratings">
-                        <i class="fa-solid fa-star" style="color: #ffd700;"></i>
-                        <i class="fa-solid fa-star" style="color: #ffd700;"></i>
-                        <i class="fa-solid fa-star" style="color: #ffd700;"></i>
-                        <i class="fa-solid fa-star" style="color: #ffd700;"></i>
-                        <i class="fa-solid fa-star-half-alt" style="color: #ffd700;"></i>
-                    </div>
-                    <div class="book__price">
-                        <span class="book__price--normal">$59.95</span> $14.95
-                    </div>
-                </div>
-                <div class="book">
-                    <figure class="book__img--wrapper">
-                        <img class="book__img" src="./assets/atomic habits.jpg" alt="">
-                    </figure>
-                    <div class="book__title">
-                        Atomic Habits
-                    </div>
-                    <div class="book__ratings">
-                        <i class="fa-solid fa-star" style="color: #ffd700;"></i>
-                        <i class="fa-solid fa-star" style="color: #ffd700;"></i>
-                        <i class="fa-solid fa-star" style="color: #ffd700;"></i>
-                        <i class="fa-solid fa-star" style="color: #ffd700;"></i>
-                        <i class="fa-solid fa-star-half-alt" style="color: #ffd700;"></i>
-                    </div>
-                    <div class="book__price">
-                        <span class="book__price--normal">$59.95</span> $14.95
-                    </div>
-                </div>
-                <div class="book">
-                    <figure class="book__img--wrapper">
-                        <img class="book__img" src="./assets/david goggins.jpeg" alt="">
-                    </figure>
-                    <div class="book__title">
-                        Can't Hurt Me
-                    </div>
-                    <div class="book__ratings">
-                        <i class="fa-solid fa-star" style="color: #ffd700;"></i>
-                        <i class="fa-solid fa-star" style="color: #ffd700;"></i>
-                        <i class="fa-solid fa-star" style="color: #ffd700;"></i>
-                        <i class="fa-solid fa-star" style="color: #ffd700;"></i>
-                        <i class="fa-solid fa-star-half-alt" style="color: #ffd700;"></i>
-                    </div>
-                    <div class="book__price">
-                        <span class="book__price--normal">$59.95</span> $14.95
-                    </div>
-                </div>
-                <div class="book">
-                    <figure class="book__img--wrapper">
-                        <img class="book__img" src="./assets/deep work.jpeg" alt="">
-                    </figure>
-                    <div class="book__title">
-                        Deep Work
-                    </div>
-                    <div class="book__ratings">
-                        <i class="fa-solid fa-star" style="color: #ffd700;"></i>
-                        <i class="fa-solid fa-star" style="color: #ffd700;"></i>
-                        <i class="fa-solid fa-star" style="color: #ffd700;"></i>
-                        <i class="fa-solid fa-star" style="color: #ffd700;"></i>
-                        <i class="fa-solid fa-star-half-alt" style="color: #ffd700;"></i>
-                    </div>
-                    <div class="book__price">
-                        <span class="book__price--normal">$59.95</span> $14.95
-                    </div>
-                </div>
+              <div class="book">
+                <figure class="book__img--wrapper">
+                  <img
+                    class="book__img"
+                    src="./assets/crack the coding interview.png"
+                    alt=""
+                  />
+                </figure>
+                <div class="book__title">Crack the Coding Interview</div>
+              </div>
+              <div class="book">
+                <figure class="book__img--wrapper">
+                  <img
+                    class="book__img"
+                    src="./assets/atomic habits.jpg"
+                    alt=""
+                  />
+                </figure>
+                <div class="book__title">Atomic Habits</div>
+              </div>
+              <div class="book">
+                <figure class="book__img--wrapper">
+                  <img
+                    class="book__img"
+                    src="./assets/david goggins.jpeg"
+                    alt=""
+                  />
+                </figure>
+                <div class="book__title">Can't Hurt Me</div>
+              </div>
+              <div class="book">
+                <figure class="book__img--wrapper">
+                  <img class="book__img" src="./assets/deep work.jpeg" alt="" />
+                </figure>
+                <div class="book__title">Deep Work</div>
+              </div>
             </div>
           </div>
         </div>
       </section>
 
       <section id="recent" class="section">
-        <div class="container"><div class="row"></div></div>
+        <div class="container">
+          <div class="row">
+            <h2 class="section__title">
+              Recent <span class="text--primary">Books</span>
+            </h2>
+            <div class="recent__books">
+              <div class="recent__book">
+                <figure class="book__img--wrapper">
+                  <img class="book__img" src="./assets/book-1.jpeg" alt="" />
+                </figure>
+                <div class="book__title">The 10X Rule</div>
+              </div>
+              <div class="recent__book">
+                <figure class="book__img--wrapper">
+                  <img class="book__img" src="./assets/book-2.jpeg" alt="" />
+                </figure>
+                <div class="book__title">Be Obsessed or Be Average</div>
+              </div>
+              <div class="recent__book">
+                <figure class="book__img--wrapper">
+                  <img class="book__img" src="./assets/book-3.jpeg" alt="" />
+                </figure>
+                <div class="book__title">Rich Dad Poor Dad</div>
+              </div>
+              <div class="recent__book">
+                <figure class="book__img--wrapper">
+                  <img class="book__img" src="./assets/book-4.jpeg" alt="" />
+                </figure>
+                <div class="book__title">Cashflow Quadrant</div>
+              </div>
+              <div class="recent__book">
+                <figure class="book__img--wrapper">
+                  <img class="book__img" src="./assets/book-5.jpeg" alt="" />
+                </figure>
+                <div class="book__title">The 48 Laws of Power</div>
+              </div>
+              <div class="recent__book">
+                <figure class="book__img--wrapper">
+                  <img class="book__img" src="./assets/book-6.jpeg" alt="" />
+                </figure>
+                <div class="book__title">The 5 Second Rule</div>
+              </div>
+              <div class="recent__book">
+                <figure class="book__img--wrapper">
+                  <img class="book__img" src="./assets/book-7.jpg" alt="" />
+                </figure>
+                <div class="book__title">Your Next Five Moves</div>
+              </div>
+              <div class="recent__book">
+                <figure class="book__img--wrapper">
+                  <img class="book__img" src="./assets/book-8.jpeg" alt="" />
+                </figure>
+                <div class="book__title">Mastery</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="explore" class="section">
+        <div class="header__container">
+          <div class="header__description">
+            <h1>Explore more <span class="text--primary">Books</span></h1>
+            <h2>
+              Find your dream book with
+              <span class="text--primary">Library</span>
+            </h2>
+            <button class="btn">Browse Books</button>
+          </div>
+        </div>
+      </section>
+      <hr />
+      <section id="footer" class="footer">
+        <div class="footer__container">
+          <figure>
+            <img
+              src="./assets/Library.svg"
+              class="footer__logo"
+              alt="Library Logo"
+            />
+          </figure>
+          <nav>
+            <ul class="footer__links">
+              <li><a href="#" class="footer__link">Home</a></li>
+              <li><a href="#" class="footer__link">About</a></li>
+              <li><a href="#" class="footer__link">Books</a></li>
+              <li><a href="#" class="footer__link">Contact</a></li>
+            </ul>
+          </nav>
+        </div>
       </section>
     </main>
   </body>
