--- a/index.html
+++ b/index.html
@@ -215,21 +215,23 @@
       <hr />
       <section id="footer" class="footer">
         <div class="footer__container">
-          <figure>
-            <img
-              src="./assets/Library.svg"
-              class="footer__logo"
-              alt="Library Logo"
-            />
-          </figure>
-          <nav>
-            <ul class="footer__links">
-              <li><a href="#" class="footer__link">Home</a></li>
-              <li><a href="#" class="footer__link">About</a></li>
-              <li><a href="#" class="footer__link">Books</a></li>
-              <li><a href="#" class="footer__link">Contact</a></li>
-            </ul>
-          </nav>
+          <a href="#">
+            <figure>
+              <img
+                src="./assets/Library.svg"
+                class="footer__logo"
+                alt="Library Logo"
+              />
+            </figure>
+          </a>
+
+          <ul class="footer__links">
+            <li><a href="#" class="footer__link">Home</a></li>
+            <li><a href="#" class="footer__link no-cursor">About</a></li>
+            <li><a href="#" class="footer__link">Books</a></li>
+            <li><a href="#" class="footer__link no-cursor">Contact</a></li>
+          </ul>
+          <div class="footer__copyright">Copyright &copy; 2025 Library</div>
         </div>
       </section>
     </main>
