--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       src="https://kit.fontawesome.com/626ee27be3.js"
       crossorigin="anonymous"
     ></script>
+    <script src="index.js"></script>
     <title>Library</title>
   </head>
   <body>
@@ -24,6 +25,24 @@
             <li><a href="#" class="nav__link">Contact</a></li>
             <li><a href="#" class="nav__link nav__link--primary">Books</a></li>
           </ul>
+          <button class="btn__menu" onclick="openMenu()">
+            <i class="fas fa-bars"></i>
+          </button>
+        </div>
+
+        <div class="menu__backdrop">
+          <button class="btn_menu btn__menu--close" onclick="closeMenu()">
+            <i class="fas fa-times"></i>
+          </button>
+          <ul class="menu__links">
+            <li class="menu__list"><a href="#" class="menu__link">Home</a></li>
+            <li class="menu__list">
+              <a href="#features" class="menu__link">Books</a>
+            </li>
+            <li class="menu__list">
+              <a href="#" class="menu__link no-cursor">Contact</a>
+            </li>
+          </ul>
         </div>
       </nav>
     </section>
@@ -35,9 +54,9 @@
         <div class="header__container">
           <div class="header__description">
             <h1>
-              <span class="text--primary"
-                >America's most awarded online library platform</span
-              >
+              <span class="text--primary">
+                America's most awarded online library platform
+              </span>
             </h1>
             <h2>
               Find your dream book with
@@ -212,7 +231,9 @@
           </div>
         </div>
       </section>
+
       <hr />
+
       <section id="footer" class="footer">
         <div class="footer__container">
           <a href="#">
@@ -224,7 +245,6 @@
               />
             </figure>
           </a>
-
           <ul class="footer__links">
             <li><a href="#" class="footer__link">Home</a></li>
             <li><a href="#" class="footer__link no-cursor">About</a></li>
