--- a/index.html
+++ b/index.html
@@ -389,6 +389,19 @@
         </div>
       </section>
 
+      <section id="explore" class="section">
+        <div class="header__container">
+          <div class="header__description">
+            <h1>Explore more <span class="text--primary">Books</span></h1>
+            <h2>
+              Find your dream book with
+              <span class="text--primary">Library</span>
+            </h2>
+            <button class="btn">Browse Books</button>
+          </div>
+        </div>
+      </section>
+
       <section id="footer" class="footer">
         <div class="footer__container">
           <a href="#"
