--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="index.js"></script>
+    <script src="books.js"></script>
     <title>Library</title>
   </head>
   <body>
@@ -23,7 +24,7 @@
           <ul class="nav__links">
             <li><a href="#" class="nav__link">Home</a></li>
             <li><a href="#" class="nav__link">Contact</a></li>
-            <li><a href="#" class="nav__link nav__link--primary">Books</a></li>
+            <li><a href="books.html" class="nav__link nav__link--primary">Books</a></li>
           </ul>
           <button class="btn__menu" onclick="openMenu()">
             <i class="fas fa-bars"></i>
@@ -397,7 +398,7 @@
               Find your dream book with
               <span class="text--primary">Library</span>
             </h2>
-            <button class="btn">Browse Books</button>
+            <a href="books.html"><button class="btn">Browse Books</button></a>
           </div>
         </div>
       </section>
