--- a/books.html
+++ b/books.html
@@ -62,7 +62,7 @@
               Featured <span class="text--primary">Books</span>
             </h2>
             <select id="filter" onchange="filterBooks(event)">
-              <option value="" disabled>Sort</option>
+              <option value="" disabled selected>Sort</option>
               <option value="LOW_TO_HIGH">Price, Low to High</option>
               <option value="HIGH_TO_LOW">Price, High to Low</option>
               <option value="RATING_LOW_TO_HIGH">Ratings, Low to High</option>
