--- a/books.html
+++ b/books.html
@@ -69,8 +69,8 @@
               <option value="RATING_HIGH_TO_LOW">Ratings, High to Low</option>
             </select>
           </div>
-          <div class="books">
-            
+          <div class="books books__loading">
+            <i class="fas fa-spinner books__loading--spinner"></i>
           </div>
         </div>
       </div>
