Made some changes to the CSS and fixed links on the site.

--- a/books.html
+++ b/books.html
@@ -36,10 +36,10 @@
           </button>
           <ul class="menu__links">
             <li class="menu__list">
-              <a href="#" class="menu__link" onclick="closeMenu()">Home</a>
+              <a href="index.html" class="menu__link" onclick="closeMenu()">Home</a>
             </li>
             <li class="menu__list">
-              <a href="#features" class="menu__link" onclick="closeMenu()"
+              <a href="index.html" class="menu__link" onclick="closeMenu()"
                 >Books</a
               >
             </li>
@@ -75,5 +75,25 @@
         </div>
       </div>
     </section>
+
+    <section id="footer" class="footer">
+        <div class="footer__container">
+          <a href="#"
+            ><figure>
+              <img
+                src="./assets/Library.svg"
+                class="footer__logo"
+                alt="Library Logo"
+              /></figure
+          ></a>
+          <ul class="footer__links">
+            <li><a href="index.html" class="footer__link">Home</a></li>
+            <li><a href="#" class="footer__link no-cursor">About</a></li>
+            <li><a href="#" class="footer__link">Books</a></li>
+            <li><a href="#" class="footer__link no-cursor">Contact</a></li>
+          </ul>
+          <div class="footer__copyright">Copyright &copy; 2025 Library</div>
+        </div>
+      </section>
   </body>
 </html>
